appId: com.benjaminwatts.edfcrypto
---
- launchApp
    # stopApp: true
- tapOn: #  go to favourites to remove any
    id: 'favourites-tab-icon'
- tapOn:
    id: "clear-favourites-icon"
- tapOn: #  reset to main screen
    id: "home-tab-icon"
- tapOn:
    id: "search-icon"
- tapOn: "Enter coin name"
- inputText: "bitcoin"
- hideKeyboard
- tapOn:
    id: "search-result-1"
- tapOn: #  # favourite it
    id: "favourite-icon"
- tapOn: # back to search
    id: 'back-icon'
- tapOn: # back to main screen
    id: 'back-icon'
- tapOn: # switch to favourites tab
    id: 'favourites-tab-icon'
- tapOn:
    id: "favourite-result-1"
- tapOn: # unfavourite it
    id: "favourite-icon"
- tapOn:
    id: 'back-icon'
